update build order

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "ng": "ng",
+    "postinstall": "npm run installDependencies",
     "installDependencies": "npm install --prefix ./client && npm install --prefix ./streamer",
     "buildAngular": "npm run build --prefix ./client && npm run build --prefix ./streamer",
-    "start": "npm run installDependencies && npm run buildAngular && node server.js",
+    "start": "npm run buildAngular && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
