--- a/package.json
+++ b/package.json
@@ -8,32 +8,14 @@
     "postinstall": "npm run installDependencies",
     "installDependencies": "npm install --prefix ./client && npm install --prefix ./streamer",
     "buildAngular": "npm run build --prefix ./client && npm run build --prefix ./streamer",
-    "start": "npm run buildAngular && node server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular-devkit/build-angular": "~0.1100.5",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler": "^11.0.9",
-    "@angular/compiler-cli": "~11.0.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
     "express": "^4.17.1",
-    "jasmine-core": "^3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "socket.io": "^3.0.4",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "socket.io": "^3.0.4"
   },
   "nodemonConfig": {
     "ignore": [
