--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "installDependencies": "npm install --prefix ./client && npm install --prefix ./streamer",
-    "buildAngular": "npm run build --prefix ./client && npm run build --prefix ./streamer",
+    "build": "npm run build --prefix ./client && npm run build --prefix ./streamer",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
